[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Nuutti Kekkonen <nuutti.kekkonen@saunalahti.fi>"]
readme = "README.md"
packages = [{include = "poetry_web"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
cowsay = "^6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
